[gd_scene load_steps=6 format=3 uid="uid://cmlh7gi841i8"]

[ext_resource type="Script" path="res://simple_enemy_once_spawner.gd" id="1_m1t6p"]
[ext_resource type="Texture2D" uid="uid://c0cer84ulatlr" path="res://red_block.png" id="2_5ehwi"]
[ext_resource type="AudioStream" uid="uid://33u3kjjhmdkr" path="res://sounds/sfx/The Essential Retro Video Game Sound Effects Collection [512 sounds] By Juhani Junkala/General Sounds/Interactions/sfx_sounds_interaction1.wav" id="3_o1msi"]

[sub_resource type="Animation" id="Animation_yxywm"]
resource_name = "charge"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ct04"]
_data = {
"charge": SubResource("Animation_yxywm")
}

[node name="simple_enemy_once_spawner" type="Node2D"]
script = ExtResource("1_m1t6p")

[node name="Timer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(0, -8)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_5ehwi")

[node name="Label" type="Label" parent="."]
offset_left = -28.0
offset_top = -28.0
offset_right = 23.0
offset_bottom = -5.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Spawner"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ct04")
}

[node name="spawn_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o1msi")
max_distance = 400.0

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
